force-app/main/default/objects/OrderItem/fields/Actual_Goods_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Goods_Issue_Date__c</fullName>
    <description>Latest Actual Goods Issue Date</description>
    <inlineHelpText>Latest Actual Goods Issue Date</inlineHelpText>
    <label>Actual Goods Issue Date</label>
    <type>Date</type>
</CustomField>