force-app/main/default/objects/OrderItem/fields/Availability_to_Promise_ATP__c.field-meta.xml
<CustomField>
    <fullName>Availability_to_Promise_ATP__c</fullName>
    <label>Availability-to-Promise (ATP)</label>
    <type>Date</type>
</CustomField>