force-app/main/default/objects/OrderItem/fields/Availability_to_Promise_ATP_Display__c.field-meta.xml
<CustomField>
    <fullName>Availability_to_Promise_ATP_Display__c</fullName>
    <formula>IF (Availability_to_Promise_ATP__c &gt; TODAY(), TEXT(Availability_to_Promise_ATP__c - TODAY()) &amp; &quot; days to go&quot;, TEXT(TODAY() - Availability_to_Promise_ATP__c) &amp; &quot; days ago&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability-to-Promise (ATP) Display</label>
    <type>Text</type>
</CustomField>