force-app/main/default/objects/OrderItem/fields/Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Quantity__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Delivered Quantity</description>
    <label>Delivered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>