force-app/main/default/objects/OrderItem/fields/Delivery_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Creation_Date__c</fullName>
    <description>Latest Delivery Creation Date</description>
    <inlineHelpText>Latest Delivery Creation Date</inlineHelpText>
    <label>Delivery Creation Date</label>
    <type>Date</type>
</CustomField>