force-app/main/default/objects/OrderItem/fields/Good_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Good_Issue_Date__c</fullName>
    <description>Good Issue Date</description>
    <label>Good Issue Date</label>
    <type>Date</type>
</CustomField>