force-app/main/default/objects/OrderItem/fields/In_Process_Quantity__c.field-meta.xml
<CustomField>
    <fullName>In_Process_Quantity__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Delivery In Process Quantity</description>
    <label>In Process Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>