force-app/main/default/objects/OrderItem/fields/Line_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_No__c</fullName>
    <label>Line Item No.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>