force-app/main/default/objects/OrderItem/fields/Material_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Material_Available_Date__c</fullName>
    <label>Material Available Date</label>
    <type>Date</type>
</CustomField>