force-app/main/default/objects/OrderItem/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <formula>Material_Number__r.Material_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>