force-app/main/default/objects/OrderItem/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Material_Number__c</description>
    <label>Material Number</label>
    <referenceTo>Material_Number__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>