force-app/main/default/objects/OrderItem/fields/Original_Promised_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Promised_Date__c</fullName>
    <label>Original Promised Date (OPD)</label>
    <type>Date</type>
</CustomField>