force-app/main/default/objects/OrderItem/fields/Shipping_Point__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Point__c</fullName>
    <label>Shipping Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM01</fullName>
                <label>WM ARMENIA</label>
            </value>
            <value>
                <fullName>AU01</fullName>
                <label>Artarmon-Production SDC</label>
            </value>
            <value>
                <fullName>AU02</fullName>
                <label>SDC - Branch Distribution</label>
            </value>
            <value>
                <fullName>AU03</fullName>
                <label>Sydney Distribution Center</label>
            </value>
            <value>
                <fullName>AU04</fullName>
                <label>SDC - INTC  Distribution</label>
            </value>
            <value>
                <fullName>AU10</fullName>
                <label>Somersby - Field Services</label>
            </value>
            <value>
                <fullName>AU11</fullName>
                <label>Somersby - White Metal Service</label>
            </value>
            <value>
                <fullName>AU12</fullName>
                <label>Beresfield - Service Centre</label>
            </value>
            <value>
                <fullName>AU13</fullName>
                <label>Parkes - Service Centre</label>
            </value>
            <value>
                <fullName>AU14</fullName>
                <label>Wollongong - Service Centre</label>
            </value>
            <value>
                <fullName>AU1A</fullName>
                <label>Artarmon-Assembly Area</label>
            </value>
            <value>
                <fullName>AU1E</fullName>
                <label>Artarmon-Elastomer shop</label>
            </value>
            <value>
                <fullName>AU1F</fullName>
                <label>Artarmon-Foundry Area</label>
            </value>
            <value>
                <fullName>AU1M</fullName>
                <label>Artarmon-Machine shop</label>
            </value>
            <value>
                <fullName>AU1P</fullName>
                <label>Artarmon-Pattern Area</label>
            </value>
            <value>
                <fullName>AU1T</fullName>
                <label>Artarmon-Paint Shop</label>
            </value>
            <value>
                <fullName>AU1W</fullName>
                <label>Artarmon-Warehouse</label>
            </value>
            <value>
                <fullName>AU20</fullName>
                <label>Multiflo Coolum Beach</label>
            </value>
            <value>
                <fullName>AU21</fullName>
                <label>Rockhampton - Service Centre</label>
            </value>
            <value>
                <fullName>AU22</fullName>
                <label>Mackay - Service Centre</label>
            </value>
            <value>
                <fullName>AU23</fullName>
                <label>Townsville-Hose Mfr&amp;Lining</label>
            </value>
            <value>
                <fullName>AU24</fullName>
                <label>Townsville-Service Centre</label>
            </value>
            <value>
                <fullName>AU25</fullName>
                <label>Mt Isa - Service Centre</label>
            </value>
            <value>
                <fullName>AU2A</fullName>
                <label>SDC - To Artarmon</label>
            </value>
            <value>
                <fullName>AU30</fullName>
                <label>Clayton Service Centre</label>
            </value>
            <value>
                <fullName>AU40</fullName>
                <label>Adelaide Store</label>
            </value>
            <value>
                <fullName>AU50</fullName>
                <label>Perth Airport Warehouse</label>
            </value>
            <value>
                <fullName>AU51</fullName>
                <label>Perth Airport Service Centre</label>
            </value>
            <value>
                <fullName>AU52</fullName>
                <label>Bunbury - Service Centre</label>
            </value>
            <value>
                <fullName>AU53</fullName>
                <label>Kalgoorlie Service Centre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>