force-app/main/default/objects/OrderItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Created</fullName>
                <default>true</default>
                <label>Order Created</label>
            </value>
            <value>
                <fullName>Delivery In Process</fullName>
            </value>
            <value>
                <fullName>Partially Delivered</fullName>
            </value>
            <value>
                <fullName>Fully Delivered</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>