force-app/main/default/objects/OrderItem/fields/X1st_Planned_Goods_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Planned_Goods_Issue_Date__c</fullName>
    <label>1st Planned Goods Issue Date</label>
    <type>Date</type>
</CustomField>