force-app/main/default/objects/OrderItem/fields/X1st_Planned_Material_Avail_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Planned_Material_Avail_Date__c</fullName>
    <label>1st Planned Material Avail Date</label>
    <type>Date</type>
</CustomField>